fixes myCV removed

--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
     </style>
     <img src="assets/image.png" alt="Ali Tap" style="width: 200px; height: 200px; float: right;">
     <div class="menuBar " style="background-color: #f1f1f1; padding: 10px; margin-top: 0;">
-        <a href="myCv.html" style="text-decoration: none; color: black; font-size: 20px; margin-right: 20px;">Home</a>
+        <a href="index.html" style="text-decoration: none; color: black; font-size: 20px; margin-right: 20px;">Home</a>
         <a href="experience.html"
             style="text-decoration: none; color: black; font-size: 20px; margin-right: 20px;">Experience</a>
         <a href="projects.html"
